Creamos el index.html según el ejercicio A

--- a/index.html
+++ b/index.html
@@ -9,7 +9,46 @@
   
   <body>
     
-    
+    <header class="main-header">
+
+      <h1 class="title">Mi Página Web</h1>
+
+      <nav class="nav-bar">
+        <li>
+          <a href="">Inicio</a>
+        </li>
+        <li>
+          <a href="">Acerca de</a>
+        </li>
+        <li>
+          <a href="">Contacto</a>
+        </li>
+      </nav> <!-- .nav-container -->
+
+    </header>
+
+
+    <main>
+      <section>
+        <h2>Bienvenido a mi sitio web</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nobis cumque eligendi aliquam iusto molestias hic quas, excepturi nam ea beatae iure fugiat sint possimus, id sequi ab! Odio, consequatur. Asperiores dolores doloribus nesciunt consequatur.</p>
+      </section>
+
+      <section>
+        <h3>Sobre mí</h3>
+        <p>Aquí puedes conocerme un poco mejor.</p>
+      </section>
+
+      <section>
+        <h3>Mis proyectos</h3>
+        <p>Descubre mis últimos proyectos.</p>
+      </section>
+
+    </main>
+
+    <footer class="main-footer">
+      <p>© 2025 Todos los derechos reservados.</p>
+    </footer>
 
     <script type="module" src="/src/main.js"></script>
   </body>
