--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <header class="main-header">
 
-      <h1 class="title">Mi Página Web</h1>
+      <!-- <h1 class="title">Mi Página Web</h1> -->
 
       <nav class="nav-bar">
         <li>
