--- a/index.html
+++ b/index.html
@@ -11,25 +11,36 @@
   </head>
   
   <body>
-    
-    <header class="main-header">
 
-      <!-- <h1 class="title">Mi Página Web</h1> -->
+    <header class="main-header">
+      <input type="checkbox" id="menu">
 
       <nav class="nav-bar">
-        <li>
-          <a href="">Inicio</a>
-        </li>
-        <li>
-          <a href="">Acerca de</a>
-        </li>
-        <li>
-          <a href="">Contacto</a>
-        </li>
-      </nav> <!-- .nav-container -->
+        <ul class="nav-bar__nav-list">
+          <!-- li*4.nav-bar__nav-item>a.nav-bar__nav-link{Inicio} -->
+          <li class="nav-bar__nav-item">
+            <a href="" class="nav-bar__nav-link">Inicio</a>
+          </li>
+          <li class="nav-bar__nav-item">
+            <a href="" class="nav-bar__nav-link">Acerca de</a>
+          </li>
+          <li class="nav-bar__nav-item">
+            <a href="" class="nav-bar__nav-link">Contacto</a>
+          </li>
+        </ul>
+      </nav> <!-- .nav-bar -->
+
+      <div class="search-bar">
+        <div class="menu-toogle">
+          <label for="menu" class="menu-toogle__label">
+            <span class="menu-toogle__top-bread"></span>
+            <span class="menu-toogle__meat"></span>
+            <span class="menu-toogle__bottom-bread"></span>
+          </label>
+        </div> <!-- .menu-toogle -->
+      </div> <!-- .search-bar -->
 
     </header>
-
 
     <main>
       <section>
@@ -49,7 +60,7 @@
 
     </main>
 
-    <footer class="main-footer">
+    <footer>
       <p>© 2025 Todos los derechos reservados.</p>
     </footer>
 
