Finalizamos con Ejercicio A

--- a/index.html
+++ b/index.html
@@ -43,27 +43,33 @@
     </header>
 
     <main>
-      <div class="main-main">
-        <h1>Bienvenido a mi sitio web</h1>
-        <section>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nobis cumque eligendi aliquam iusto molestias hic quas, excepturi nam ea beatae iure fugiat sint possimus, id sequi ab! Odio, consequatur. Asperiores dolores doloribus nesciunt consequatur.</p>
-        </section>
-        <div>
-          <section>
-            <h2>Sobre mí</h2>
-            <p>Aquí puedes conocerme un poco mejor.</p>
-          </section>
+      <h1>Bienvenido a mi sitio web</h1>
+
+      <section class="info">
+
+        <section class="">
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nobis cumque eligendi aliquam iusto molestias hic quas, excepturi nam ea beatae iure fugiat sint possimus, id sequi ab! Odio, consequatur. Asperiores dolores doloribus nesciunt consequatur.</p>
 
           <section>
-            <h2>Mis proyectos</h2>
-            <p>Descubre mis últimos proyectos.</p>
+            <div>
+              <h2>Sobre mí</h2>
+              <p>Aquí puedes conocerme un poco mejor.</p>
+            </div>
+            <div>
+              <h2>Mis proyectos</h2>
+              <p>Descubre mis últimos proyectos.</p>
+            </div>
           </section>
+
+        </section>
+
+        <div class="info__side-column">
+          <h2>Contenido adicional</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odio! Dignissimos temporibus incidunt, nobis repellat, eligendi quod quidem obcaecati possimus maxime reiciendis animi commodi, accusamus officia enim? Est, aspernatur consectetur. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto cum quasi eveniet dignissimos, quo corrupti eius voluptatibus modi, minima doloremque, facilis harum illum iusto ut. Natus commodi eaque rem. Rerum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore aspernatur reprehenderit recusandae nesciunt repudiandae doloribus laborum facere tempora, quasi eligendi iusto, nemo, eum quaerat cupiditate sequi. Atque beatae possimus sunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda recusandae ipsa alias mollitia laborum sapiente quisquam non culpa reprehenderit, veritatis quis nostrum debitis iure quo cupiditate? Ratione tempora iste iusto.</p>
         </div>
-      </div>
-      <section class="main-main__side-column">
-        <h2>Contenido adicional</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odio! Dignissimos temporibus incidunt, nobis repellat, eligendi quod quidem obcaecati possimus maxime reiciendis animi commodi, accusamus officia enim? Est, aspernatur consectetur. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto cum quasi eveniet dignissimos, quo corrupti eius voluptatibus modi, minima doloremque, facilis harum illum iusto ut. Natus commodi eaque rem. Rerum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore aspernatur reprehenderit recusandae nesciunt repudiandae doloribus laborum facere tempora, quasi eligendi iusto, nemo, eum quaerat cupiditate sequi. Atque beatae possimus sunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda recusandae ipsa alias mollitia laborum sapiente quisquam non culpa reprehenderit, veritatis quis nostrum debitis iure quo cupiditate? Ratione tempora iste iusto.</p>
       </section>
+
     </main>
 
     <footer>
