Creamos la card del producto correctamente

--- a/src/ejercicioD/ejercicioD.html
+++ b/src/ejercicioD/ejercicioD.html
@@ -9,6 +9,18 @@
   
   <body>
 
+    <div class="card-container">
+
+      <img src="../../public/imgs/mouse-Logitech.webp" alt="Mouse gamer">
+
+      <h1>Mouse gamer inalámbrico Logitech lightspeed G305</h1>
+
+      <p>El Logitech G305 Lightspeed es un mouse gamer inalámbrico conocido por su rendimiento, precisión y diseño compacto. Utiliza la tecnología inalámbrica LIGHTSPEED, que ofrece una conexión rápida y estable con una latencia de 1 ms, ideal para juegos competitivos.</p>
+
+      <button>Comprar</button>
+
+    </div>
+
     <script type="module" src="/src/ejercicioD/ejercicioD.js"></script>
   </body>
 
